--- a/index.html
+++ b/index.html
@@ -15,8 +15,51 @@
       <h1>Picture This!</h1>
       <h4>My Really Cool Blog Post</h4>
     </div>
-    <img src="images/museum.jpg" alt="placeholder">
 
+    <!-- Responsive imaging-->
+
+    <picture>
+      <!-- landscape -->
+      <source srcset="images/museum-320x.jpg, 
+      images/museum-640x.jpg 2x, 
+      images/museum-960x.jpg 3x"
+      media="(max-width: 320px)">
+
+      <source srcset="images/museum-480x.jpg, 
+      images/museum-960x.jpg 2x, 
+      images/museum-1440x.jpg 3x"
+      media="(max-width: 480px)">
+
+      <source srcset="images/museum-720x.jpg, 
+      images/museum-1440x.jpg 2x, 
+      images/museum-2160x.jpg 3x"
+      media="(max-width: 720px)">
+
+      <source srcset="images/museum-960x.jpg, 
+      images/museum-1920x.jpg 2x, 
+      images/museum-2880x.jpg 3x"
+      media="(max-width: 960px)">
+
+    <!-- square -->
+
+      <source srcset="images/museum-800x800.jpg, 
+      images/museum-1600x1600.jpg 2x, 
+      images/museum-2400x2400.jpg 3x"
+      media="(min-width: 1600px)">
+
+      <source srcset="images/museum-640x640.jpg, 
+      images/museum-1280x1280.jpg 2x, 
+      images/museum-1920x1980.jpg 3x"
+      media="(min-width: 1280px)">
+
+      <source srcset="images/museum-480x480.jpg, 
+      images/museum-960x960.jpg 2x, 
+      images/museum-1440x1440.jpg 3x"
+      media="(min-width: 959px)">
+
+      <img src="images/museum.jpg" alt="museum room picture">
+    </picture>
+  
   </header>
 </body>
 
